2009-12-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.12 ========================
	* 

2009-12-03  Andreas Kupries  <andreask@activestate.com>

	* support/devel/sak/readme/readme.tcl: Strip trailing whitespace
	  from the table formatted parts of the generated readme.

2009-12-01  Andreas Kupries  <andreask@activestate.com>

	* New modules 'virtchannel_{core,base,transform}' with packages
	  providing core services to reflected channels and
	  transformations, and basic reflected channels, and
	  transforms. This is in essence the example code for the paper I
	  presented at Tcl'2009 in Portland (Reflected and Transformed
	  Channels).

	* support/installation/modules.tcl: New modules 'virtchannel_*'.

2009-11-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* New package 'json::write' in existing module 'json'.

	* support/devel/sak/note/cmd.tcl: Extended note command to show
	* support/devel/sak/note/note.tcl: saved hints when called without
	  arguments.

2009-11-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* support/installation/modules.tcl: Fix issue with examples for logger,
	* support/installation/actions.tcl: which did not fit the
	  expectations of action _exa, which assumed the module name,
	  which is 'log'. Instead of wrestling CVS into renaming the
	  directory a new action is made which takes the actual name as
	  argument.

	* support/devel/sak/note/cmd.tcl: New sak commands 'note' and 'readme'
	* support/devel/sak/note/help.txt: for semi-automatic generation of
	* support/devel/sak/note/note.tcl: the release README.txt from
	* support/devel/sak/note/pkgIndex.tcl: current and last package
	* support/devel/sak/note/topic.txt: versions, and note'd hints.
	* support/devel/sak/readme/cmd.tcl:
	* support/devel/sak/readme/help.txt:
	* support/devel/sak/readme/pkgIndex.tcl:
	* support/devel/sak/readme/readme.tcl:
	* support/devel/sak/readme/topic.txt:
